# ProjectCyan

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/agent/: graph.py  memory.py  prompts.md  tools.py
app/api/: main.py
app/core/: config.py  models.py
app/interface/openclaw-skill/: trading-agent-skill.py
app/trading-engine/: backtester.py  data.py  features.py
